An attempt to test ignite 2.14 osgi metadata.
Signed-off-by: Łukasz Dywicki <luke@code-house.org>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -76,7 +76,8 @@
                 <feature>framework</feature>
               </framework>
               <features>
-                <feature>ignite*</feature>
+                <feature>ignite-poc</feature>
+                <feature>ignite-poc-rest</feature>
               </features>
             </configuration>
           </execution>
